--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-leases.txt
-coredhcp
+.*.swp
+cmds/coredhcp/leases.txt
+cmds/coredhcp/config.yml
+cmds/coredhcp/coredhcp
 cmds/client/client
-config.yml
