Unified config and plugin loading for v6 and v4

--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -5,5 +5,5 @@ server6:
         - file: "leases.txt"
         # - dns: 8.8.8.8 8.8.4.4 2001:4860:4860::8888 2001:4860:4860::8844
 
-#server4:
-#    listen: '127.0.0.1:67'
+server4:
+    listen: '127.0.0.1:67'
