--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -6,4 +6,7 @@ server6:
         # - dns: 8.8.8.8 8.8.4.4 2001:4860:4860::8888 2001:4860:4860::8844
 
 server4:
-    listen: '127.0.0.1:67'
+    listen: '0.0.0.0:67'
+    plugins:
+        - server_id: 192.168.1.12
+#        - file: "leases.txt"
