--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,36 @@ language: go
 sudo: required
 
 go:
-  - "1.9"
-  - "1.10"
   - "1.11"
+  - "1.12"
   - tip
+
+env:
+  - TEST_SUITE=unit
+  - TEST_SUITE=linters
 
 before_install:
   - go get -t -v ./...
+  - go get -t -v github.com/stretchr/testify/...
 
 before_script:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
       sudo sh -c 'echo 0 > /proc/sys/net/ipv6/conf/all/disable_ipv6';
     fi
 
-script:
-  - ./.travis/tests.sh
+script: |
+  set -x
+  case $TEST_SUITE in
+  unit)
+      ./.travis/tests.sh
+      ;;
+  linters)
+      ./.travis/linters.sh
+      ;;
+  *)
+      echo "[!] Unknown test suite: ${TEST_SUITE}. Exiting."
+      exit 1
+  esac
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
