Basic DHCPv4 server, needs more work
Signed-off-by: borna_blazevic <borna.blazevic@sartura.hr>
Signed-off-by: borna-blazevic <borna.blazevic@sartura.hr>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .*.swp
 cmds/coredhcp/leases.txt
+cmds/coredhcp/leases4.txt
 cmds/coredhcp/config.yml
 cmds/coredhcp/coredhcp
 cmds/client/client
+.vscode
