--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -2,12 +2,14 @@ server6:
     interface: "eth0"
     #listen: 'your-unicast-address:547'
     plugins:
-        - server_id: LL 00:de:ad:be:ef:00
+        #- server_id: LL 00:de:ad:be:ef:00
         - file: "leases.txt"
         # - dns: 2001:4860:4860::8888 2001:4860:4860::8844
 
 server4:
     listen: '0.0.0.0:67'
     interface: "eth0"
-    plugins:
-        - server_id: 192.168.1.12
+    plugins:        
+        #- server_id: 10.10.10.1
+        #- file: leases.txt 10.10.10.1/24 60
+        #- dns: 8.8.8.8 8.8.4.4
