--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -2,7 +2,7 @@ server6:
     interface: "eth0"
     #listen: 'your-unicast-address:547'
     plugins:
-        #- server_id: LL 00:de:ad:be:ef:00
+        - server_id: LL 00:de:ad:be:ef:00
         - file: "leases.txt"
         # - dns: 2001:4860:4860::8888 2001:4860:4860::8844
 
