Added router plugin to examples.
Signed-off-by: borna-blazevic <borna.blazevic@sartura.hr>

--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -13,3 +13,4 @@ server4:
         #- server_id: 10.10.10.1
         #- file: leases.txt 10.10.10.1/24 60
         #- dns: 8.8.8.8 8.8.4.4
+        #- router: 10.10.10.1
