--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -11,7 +11,8 @@ server4:
     interface: "eth0"
     plugins:
         # - server_id: 10.10.10.1
-        # - file: leases.txt 10.10.10.100 10.10.10.200 60s
         # - dns: 8.8.8.8 8.8.4.4
         # - router: 10.10.10.1
         # - netmask: 255.255.255.0
+        # - file: leases.txt 60s
+        # - range: leases.txt 10.10.10.100 10.10.10.200 60s
