Fixed the examples.
Signed-off-by: borna-blazevic <borna.blazevic@sartura.hr>

--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -14,5 +14,4 @@ server4:
         # - dns: 8.8.8.8 8.8.4.4
         # - router: 10.10.10.1
         # - netmask: 255.255.255.0
-        # - file: leases.txt 60s
-        # - range: leases.txt 10.10.10.100 10.10.10.200 60s
+        # - file: leases.txt
