--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@ language: go
 sudo: required
 
 go:
-  - "1.11"
   - "1.12"
+  - "1.13"
   - tip
 
 env:
-  - TEST_SUITE=unit
-  - TEST_SUITE=linters
+  global:
+    - GO111MODULE=on
+  matrix:
+    - TEST_SUITE=unit
+    - TEST_SUITE=linters
 
 before_install:
   - go get -t -v ./...
