Added CoreDHCP generator tool
This tool generates the source file for a CoreDHCP server based on the
specified plugins. The tool must be run from its source directory,
otherwise it requires the -template argument.
Example:
./coredhcp-generator \
        github.com/coredhcp/coredhcp/plugins/{dns,file}

will generate a file called coredhcp.go in a temporary directory.

Signed-off-by: Andrea Barberio <insomniac@slackware.it>

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ cmds/coredhcp/leases4.txt
 cmds/coredhcp/config.yml
 cmds/coredhcp/coredhcp
 cmds/client/client
+cmds/coredhcp-generator/coredhcp-generator
 .vscode
