[CI] Use netns to simulate a client-server scenario
Signed-off-by: Andrea Barberio <insomniac@slackware.it>
Signed-off-by: Anatole Denis <anatole@unverle.fr>

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script: |
   set -x
   case $TEST_SUITE in
   unit)
+      ./.travis/setup-integ.sh
       ./.travis/tests.sh
       ;;
   linters)
