Support dynamic plugin loading
Adds a configuration option and loader code to support loading plugins
built with `go build -buildmode=plugin` at init time, as an alternative
to statically building them in.

Signed-off-by: Anatole Denis <anatole@unverle.fr>

--- a/cmds/coredhcp/config.yml.example
+++ b/cmds/coredhcp/config.yml.example
@@ -16,3 +16,5 @@ server4:
         # - router: 10.10.10.1
         # - netmask: 255.255.255.0
         # - range: leases.txt 10.10.10.100 10.10.10.200 60s
+
+dynamic_plugins: /usr/lib64/coredhcp/plugins
