travis: Add a job checking coredhcp-generator/coredhcp sync
This ensures modifications in cmds/coredhcp-generator and cmds/coredhcp
are in sync

Signed-off-by: Anatole Denis <anatole@unverle.fr>

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,3 +43,8 @@ script: |
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
+
+jobs:
+  include:
+    - name: Generator/main entrypoint drift
+      script: ./.travis/check-generator-main.sh
