--- a/cmds/coredhcp-generator/coredhcp.go.template
+++ b/cmds/coredhcp-generator/coredhcp.go.template
@@ -2,6 +2,10 @@
 // This source code is licensed under the MIT license found in the
 // LICENSE file in the root directory of this source tree.
 
+{{/* This file is the template source. The following comment obviously doesn't apply here */ -}}
+// This is a generated file, edits should be made in the corresponding source file
+// And this file regenerated using `coredhcp-generator -from core-plugins.txt`
+
 package main
 
 import (
