--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ jobs:
       before_install: go get -u github.com/u-root/u-root/tools/checklicenses
       script: checklicenses -c .travis/checklicenses_config.json
     - name: golangci-lint
-      before_install: GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint
+      before_install: go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.27.0
       script: golangci-lint run
