--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           # clone in the gopath
           path: src/github.com/${{ github.repository }}
+          fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
           stable: false
@@ -26,16 +27,21 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/src/github.com/${{ github.repository }}
           go get -v -t ./...
-          echo "" > coverage.txt
+          echo "" > "${GITHUB_WORKSPACE}"/coverage.txt
           for d in $(go list ./...); do
               go test -v -race -coverprofile=profile.out -covermode=atomic "${d}"
               if [ -f profile.out ]; then
-                cat profile.out >> coverage.txt
+                cat profile.out >> "${GITHUB_WORKSPACE}"/coverage.txt
                 rm profile.out
               fi
           done
-      - name: report to codecov
-        run: bash <(curl -s https://codecov.io/bash) -c -f coverage.txt -F unittest
+      - name: report coverage to codecov
+        uses: codecov/codecov-action@v1
+        with:
+          files: coverage.txt
+          flags: unittests
+          fail_ci_if_error: true
+          verbose: true
   integration-tests:
     runs-on: ubuntu-latest
     strategy:
@@ -46,6 +52,7 @@ jobs:
         with:
           # clone in the gopath
           path: src/github.com/${{ github.repository }}
+          fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
           stable: false
@@ -55,20 +62,29 @@ jobs:
           # trick.
           echo "GOPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
           echo "GO111MODULE=on" >> $GITHUB_ENV
-      - name: run integ tests
+      - name: setup integ tests
         run: |
           cd $GITHUB_WORKSPACE/src/github.com/${{ github.repository }}
-          go get -v -t ./...
-          echo "" > coverage.txt
-          for d in $(go list ./...); do
+          ./.ci/setup-integ.sh
+      - name: run integ tests
+        run: |
+          cd $GITHUB_WORKSPACE/src/github.com/${{ github.repository }}/integ
+          go get -v -t -tags=integration ./...
+          echo "" > "${GITHUB_WORKSPACE}"/coverage.txt
+          for d in $(go list -tags=integration ./...); do
               go test -c -tags=integration -v -race -coverprofile=profile.out -covermode=atomic "${d}"
               testbin="./$(basename $d).test"
               # only run it if it was built - i.e. if there are integ tests
               test -x "${testbin}" && sudo "./${testbin}"
               if [ -f profile.out ]; then
-                cat profile.out >> coverage.txt
+                cat profile.out >> "${GITHUB_WORKSPACE}"/coverage.txt
                 rm profile.out
               fi
           done
-      - name: report to codecov
-        run: bash <(curl -s https://codecov.io/bash) -c -f coverage.txt -F integtest
+      - name: report coverage to codecov
+        uses: codecov/codecov-action@v1
+        with:
+          files: coverage.txt
+          flags: integtests
+          fail_ci_if_error: true
+          verbose: true
