install library for pcap for ci
Signed-off-by: Daniel Zainzinger <dza1@mailbox.org>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,9 @@ jobs:
           # trick.
           echo "GOPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
           echo "GO111MODULE=on" >> $GITHUB_ENV
+      - name: install library
+        run: |
+          sudo apt-get install libpcap-dev
       - name: run unit tests
         run: |
           cd $GITHUB_WORKSPACE/src/github.com/${{ github.repository }}
@@ -62,6 +65,9 @@ jobs:
           # trick.
           echo "GOPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
           echo "GO111MODULE=on" >> $GITHUB_ENV
+      - name: install library
+        run: |
+          sudo apt-get install libpcap-dev
       - name: setup integ tests
         run: |
           cd $GITHUB_WORKSPACE/src/github.com/${{ github.repository }}
