--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
           # trick.
           echo "GOPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
           echo "GO111MODULE=on" >> $GITHUB_ENV
+      - name: install library
+        run: |
+          sudo apt-get install libpcap-dev
       - name: build coredhcp
         run: |
           set -exu
