--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: install library
+        run: |
+          sudo apt-get install libpcap-dev
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
