Created sleep plugin
The `sleep` plugin introduces a delay in the chain of response to a DHCP
transaction.

Signed-off-by: Andrea Barberio <insomniac@slackware.it>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
           cd "${builddir}"
           ls -l
           go mod init "coredhcp"
+          go mod edit -replace "github.com/coredhcp/coredhcp=${GITHUB_WORKSPACE}/src/github.com/${{ github.repository }}"
           go build
           gofmt -w "${builddir}/coredhcp.go"
           diff -u "${builddir}/coredhcp.go" "${GITHUB_WORKSPACE}"/src/github.com/${{ github.repository }}/cmds/coredhcp/main.go
