--- a/cmds/coredhcp-generator/coredhcp.go.template
+++ b/cmds/coredhcp-generator/coredhcp.go.template
@@ -52,9 +52,9 @@ func getLogLevels() []string {
 	return levels
 }
 
-var desiredPlugins = []*plugins.Plugin{
+var desiredPlugins = []plugins.Plugin{
 {{- range $plugin := .}}
-	&{{importname $plugin}}.Plugin,
+	&{{importname $plugin}}.Plugin{},
 {{- end}}
 }
 
@@ -63,7 +63,7 @@ func main() {
 
 	if *flagPlugins {
 		for _, p := range desiredPlugins {
-			fmt.Println(p.Name)
+			fmt.Println(p.GetName())
 		}
 		os.Exit(0)
 	}
@@ -90,7 +90,7 @@ func main() {
 	// register plugins
 	for _, plugin := range desiredPlugins {
 		if err := plugins.RegisterPlugin(plugin); err != nil {
-			log.Fatalf("Failed to register plugin '%s': %v", plugin.Name, err)
+			log.Fatalf("Failed to register plugin '%s': %v", plugin.GetName(), err)
 		}
 	}
 
