Fix dependabot warnings, bump Go vesions to 1.19 and 1.20
Updated all the dependencies and addressed dependabot warnings from 12
to 20, starting at
https://github.com/coredhcp/coredhcp/security/dependabot/12 .
This also required dropping Go 1.14/1.15 and bump to the latest two
versions, 1.19 and 1.20.

Signed-off-by: Andrea Barberio <insomniac@slackware.it>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,11 +13,11 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.29
+          # version: v3.0.0
 
           # Optional: golangci-lint command line arguments.
           # args: --issues-exit-code=0
@@ -35,5 +35,6 @@ jobs:
       - name: check license headers
         run: |
           set -exu
-          go get -u github.com/u-root/u-root/tools/checklicenses
+          go get github.com/u-root/u-root/tools/checklicenses
+          go install github.com/u-root/u-root/tools/checklicenses
           $(go env GOPATH)/bin/checklicenses -c .ci/checklicenses_config.json
