--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: ['1.14', '1.15']
+        go: ['1.19', '1.20']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # clone in the gopath
           path: src/github.com/${{ github.repository }}
@@ -32,9 +32,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: ['1.14', '1.15']
+        go: ['1.19', '1.20']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # clone in the gopath
           path: src/github.com/${{ github.repository }}
@@ -58,6 +58,7 @@ jobs:
           ls -l
           go mod init "coredhcp"
           go mod edit -replace "github.com/coredhcp/coredhcp=${GITHUB_WORKSPACE}/src/github.com/${{ github.repository }}"
+          go mod tidy
           go build
           gofmt -w "${builddir}/coredhcp.go"
           diff -u "${builddir}/coredhcp.go" "${GITHUB_WORKSPACE}"/src/github.com/${{ github.repository }}/cmds/coredhcp/main.go
