--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,25 +13,26 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          # version: v3.0.0
+          go-version: '1.21'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v1.56.2
 
           # Optional: golangci-lint command line arguments.
           # args: --issues-exit-code=0
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
-          # only-new-issues: true
+          only-new-issues: true
 
-          # Optional: if set to true then the action will use pre-installed Go
-          # skip-go-installation: true
   checklicenses:
     name: checklicenses
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: check license headers
         run: |
           set -exu
