--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,9 +21,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: v1.56.2
-
-          # Optional: golangci-lint command line arguments.
-          # args: --issues-exit-code=0
+          args: --timeout=120s
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           only-new-issues: true
