--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,8 +20,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
-          version: v1.56.2
-          args: --timeout=120s
+          version: v1.62.2
+          args: --timeout=5m
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           only-new-issues: true
